yaml/base/llava-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: llava-frontend
  name: llava-frontend
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: llava-frontend
status:
  loadBalancer: {}
